[tool.poetry]
name = "tinventory"
version = "0.1.0"
description = ""
authors = ["Jonathan Weth <git@jonathanweth.de>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
requests = "^2.25.0"
django-bootstrap-form = "^3.4"
django-cors-headers = "^3.5.0"
django-oauth-toolkit = "^1.3.3"
django-widget-tweaks = "^1.4.8"
djangorestframework = "^3.12.2"
fpdf = "^1.7.2"
Pillow = "^8.0.1"
django-debug-toolbar = "^3.1.1"
django-yarnpkg = "^6.0.1"
django-select2 = "^7.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
