[tool.poetry]
name = "tinventory"
version = "0.1.0"
description = ""
authors = ["Jonathan Weth <git@jonathanweth.de>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
requests = "^2.25.0"
django-bootstrap-form = "^3.4"
django-cors-headers = "^3.5.0"
django-oauth-toolkit = "^1.3.3"
django-widget-tweaks = "^1.4.8"
djangorestframework = "^3.12.2"
fpdf = "^1.7.2"
Pillow = "^8.0.1"
django-debug-toolbar = "^3.2"
django-yarnpkg = "^6.0.1"
django-select2 = "^7.5.0"
python-memcached = "^1.59"
django-redis = "^4.12.1"

[tool.poetry.dev-dependencies]
sphinx = "^3.0"
sphinxcontrib-django = "^0.5.0"
sphinx-autodoc-typehints = "^1.7"
django-stubs = "^1.1"
pytest = "^6.2"
pytest-django = "^4.1"
pytest-django-testing-postgresql = "^0.1"
selenium = "^3.141.0"
safety = "^1.8.5"
flake8 = "^3.7.9"
flake8-django = "^1.0.0"
flake8-fixme = "^1.1.1"
flake8-mypy = "^17.8.0"
flake8-bandit = "^2.1.2"
flake8-builtins = "^1.4.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
black = "^20.8b1"
flake8-black = "^0.2.0"
isort = "^5.0.0"
flake8-isort = "^4.0.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
